Upstream changes made on work laptop (Tintri)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,3 +56,16 @@ bind ^ split-window -h \; split-window \; select-pane -L \; split-window \; sele
 
 # Sync panes
 bind s set-window-option synchronize-panes
+
+# Stop annoying renames after I make everything beautiful
+set-option -g allow-rename off
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
