Prevent window from renaming itself

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,3 +56,6 @@ bind ^ split-window -h \; split-window \; select-pane -L \; split-window \; sele
 
 # Sync panes
 bind s set-window-option synchronize-panes
+
+# Stop tmux from renaming itself
+set-window-option -g allow-rename off
