--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,7 @@ set-window-option -g mode-keys vi
 unbind [
 bind C-c copy-mode
 unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind-key p paste-buffer
 
 set -sg escape-time 1
 set -g base-index 1
@@ -37,12 +35,7 @@ set -g status-right "#[fg=cyan]%b %d %R"
 set-window-option -g monitor-activity on
 set -g visual-activity on
 set -g status-left-length 40
-
-# Enable mouse usage, if that is your kind of thing
-set-window-option -g mode-mouse on
-set -g mouse-select-pane off
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
