--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,17 +19,17 @@ set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
 set -g status-justify centre
-set-window-option -g window-status-fg cyan
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-set-window-option -g window-status-current-fg cyan
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-attr bright
-set -g pane-border-fg white
-set -g pane-active-border-fg green
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set-window-option -g window-status-style fg=cyan
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-style dim
+set-window-option -g window-status-current-style fg=cyan
+set-window-option -g window-status-current-style bg=black
+set-window-option -g window-status-current-style bright
+set -g pane-border-style fg=white
+set -g pane-active-border-style fg=green
+set -g message-style fg=white
+set -g message-style bg=black
+set -g message-style bright
 set -g status-left "#[fg=green]Session: #S"
 set -g status-right "#[fg=cyan]%b %d %R"
 set-window-option -g monitor-activity on
@@ -42,7 +42,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Split into for panes
 bind ^ split-window -h \; split-window \; select-pane -L \; split-window \; select-pane -U
