Switch to private email for git and main branch instead of master

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,9 @@
 [user]
 	name = Skyler Berg
-	email = skylertheberg@gmail.com
+	email = skylerberg@users.noreply.github.com
 [push]
 	default = current
 [core]
 	excludesfile = ~/.gitignore
+[init]
+	defaultBranch = main
